# start_getting_to_know_tests

./: Makefile  README.md  pyproject.toml
tests/: test_capitalize.py
